--- a/app/src/main/res/menu/mymenu.xml
+++ b/app/src/main/res/menu/mymenu.xml
@@ -10,6 +10,10 @@
         android:title="edit">
     </item>
     <item
+        android:id="@+id/menu_edit2"
+        android:title="edit">
+    </item>
+    <item
         android:id="@+id/menu_delete"
         android:orderInCategory="3"
         android:title="delete">
